fix(tooltip): Fix tooltip positioning
The tooltip was taking space in the page even when not visible, because
of display block.
Now, the tooltip is always visible but not on the
page; This allow to grab its width while not taking any space.
It's
placed far away, at -1000px -1000px.

--- a/packages/component-library/src/components/plmg-tooltip/plmg-tooltip.scss
+++ b/packages/component-library/src/components/plmg-tooltip/plmg-tooltip.scss
@@ -5,6 +5,9 @@
 // -------------------------------------------------
 :host {
   display: block;
+  position: fixed;
+  top: -1000px;
+  left: -1000px;
 }
 
 :host([hidden]) {
@@ -72,7 +75,6 @@ $arrow-width: 6px;
 // ------------------------------------------------
 
 .plmg-tooltip {
-  visibility: hidden;
   position: relative;
   display: block;
   font-family: tokens.$plmg-font-family-sans;
@@ -87,10 +89,6 @@ $arrow-width: 6px;
   width: fit-content;
   max-width: 150px;
   overflow-wrap: break-word;
-
-  &.visible {
-    visibility: visible;
-  }
 
   @include background-color;
 
